// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`attributeTypes 1`] = `
Object {
  "createdAt": DateTime {
    "limit": null,
    "precision": null,
    "scale": null,
  },
  "email": String {
    "limit": null,
    "precision": null,
    "scale": null,
  },
  "id": Integer {
    "limit": null,
    "precision": null,
    "scale": null,
  },
  "name": String {
    "limit": null,
    "precision": null,
    "scale": null,
  },
  "updatedAt": DateTime {
    "limit": null,
    "precision": null,
    "scale": null,
  },
}
`;

exports[`columns 1`] = `
Array [
  Column {
    "collation": null,
    "comment": null,
    "default": null,
    "defaultFunction": null,
    "name": "id",
    "nil": false,
    "sqlTypeMetaData": SqlTypeMetadata {
      "limit": null,
      "precision": null,
      "scale": null,
      "sqlType": "INTEGER",
      "type": "integer",
    },
    "tableName": "users",
  },
  Column {
    "collation": null,
    "comment": null,
    "default": null,
    "defaultFunction": null,
    "name": "name",
    "nil": true,
    "sqlTypeMetaData": SqlTypeMetadata {
      "limit": null,
      "precision": null,
      "scale": null,
      "sqlType": "varchar",
      "type": null,
    },
    "tableName": "users",
  },
  Column {
    "collation": null,
    "comment": null,
    "default": null,
    "defaultFunction": null,
    "name": "email",
    "nil": true,
    "sqlTypeMetaData": SqlTypeMetadata {
      "limit": null,
      "precision": null,
      "scale": null,
      "sqlType": "varchar",
      "type": null,
    },
    "tableName": "users",
  },
  Column {
    "collation": null,
    "comment": null,
    "default": null,
    "defaultFunction": null,
    "name": "createdAt",
    "nil": false,
    "sqlTypeMetaData": SqlTypeMetadata {
      "limit": null,
      "precision": null,
      "scale": null,
      "sqlType": "datetime",
      "type": null,
    },
    "tableName": "users",
  },
  Column {
    "collation": null,
    "comment": null,
    "default": null,
    "defaultFunction": null,
    "name": "updatedAt",
    "nil": false,
    "sqlTypeMetaData": SqlTypeMetadata {
      "limit": null,
      "precision": null,
      "scale": null,
      "sqlType": "datetime",
      "type": null,
    },
    "tableName": "users",
  },
]
`;

exports[`group 1`] = `"SELECT \\"users\\".* FROM \\"users\\" GROUP BY name"`;

exports[`limit 1`] = `"SELECT  \\"users\\".* FROM \\"users\\" WHERE \\"users\\".\\"name\\" = 'test' LIMIT 1"`;

exports[`lookupCastType 1`] = `
Integer {
  "limit": null,
  "precision": null,
  "scale": null,
}
`;

exports[`new 1`] = `
Object {
  "createdAt": FromDatabase {
    "name": "createdAt",
    "originalAttribute": Object {},
    "type": DateTime {
      "limit": null,
      "precision": null,
      "scale": null,
    },
    "valueBeforeTypeCast": null,
  },
  "email": FromUser {
    "name": "email",
    "originalAttribute": Object {},
    "type": String {
      "limit": null,
      "precision": null,
      "scale": null,
    },
    "valueBeforeTypeCast": "test@example.com",
  },
  "id": FromDatabase {
    "name": "id",
    "originalAttribute": Object {},
    "type": Integer {
      "limit": null,
      "precision": null,
      "scale": null,
    },
    "valueBeforeTypeCast": null,
  },
  "name": FromUser {
    "name": "name",
    "originalAttribute": Object {},
    "type": String {
      "limit": null,
      "precision": null,
      "scale": null,
    },
    "valueBeforeTypeCast": "test",
  },
  "updatedAt": FromDatabase {
    "name": "updatedAt",
    "originalAttribute": Object {},
    "type": DateTime {
      "limit": null,
      "precision": null,
      "scale": null,
    },
    "valueBeforeTypeCast": null,
  },
}
`;

exports[`new 2`] = `
Object {
  "createdAt": undefined,
  "email": "test@example.com",
  "id": undefined,
  "name": "test",
  "updatedAt": undefined,
}
`;

exports[`offset 1`] = `"SELECT \\"users\\".* FROM \\"users\\" ORDER BY name ASC LIMIT -1 OFFSET 10"`;

exports[`order 1`] = `"SELECT \\"users\\".* FROM \\"users\\" ORDER BY \\"users\\".\\"name\\" ASC"`;

exports[`order 2`] = `"SELECT \\"users\\".* FROM \\"users\\" ORDER BY \\"users\\".\\"email\\" DESC"`;

exports[`order 3`] = `"SELECT \\"users\\".* FROM \\"users\\" ORDER BY \\"users\\".\\"name\\" ASC, \\"users\\".\\"email\\" DESC"`;

exports[`order 4`] = `"SELECT \\"users\\".* FROM \\"users\\" ORDER BY name"`;

exports[`order 5`] = `"SELECT \\"users\\".* FROM \\"users\\" ORDER BY name DESC"`;

exports[`order 6`] = `"SELECT \\"users\\".* FROM \\"users\\" ORDER BY name DESC, email"`;

exports[`records 1`] = `Array []`;

exports[`records 2`] = `
Array [
  User {
    "attributes": Object {},
  },
]
`;

exports[`select 1`] = `"SELECT \\"users\\".\\"name\\", \\"users\\".\\"email\\", email as user_email FROM \\"users\\""`;

exports[`table.type 1`] = `
String {
  "limit": null,
  "precision": null,
  "scale": null,
}
`;

exports[`table.type 2`] = `
String {
  "limit": null,
  "precision": null,
  "scale": null,
}
`;

exports[`tableStructure 1`] = `
Array [
  Object {
    "cid": 0,
    "dflt_value": null,
    "name": "id",
    "notnull": 1,
    "pk": 1,
    "type": "INTEGER",
  },
  Object {
    "cid": 1,
    "dflt_value": null,
    "name": "name",
    "notnull": 0,
    "pk": 0,
    "type": "varchar",
  },
  Object {
    "cid": 2,
    "dflt_value": null,
    "name": "email",
    "notnull": 0,
    "pk": 0,
    "type": "varchar",
  },
  Object {
    "cid": 3,
    "dflt_value": null,
    "name": "createdAt",
    "notnull": 1,
    "pk": 0,
    "type": "datetime",
  },
  Object {
    "cid": 4,
    "dflt_value": null,
    "name": "updatedAt",
    "notnull": 1,
    "pk": 0,
    "type": "datetime",
  },
]
`;

exports[`where 1`] = `"SELECT \\"users\\".* FROM \\"users\\""`;

exports[`where 2`] = `"SELECT \\"users\\".* FROM \\"users\\" WHERE \\"users\\".\\"name\\" = 'test'"`;

exports[`where 3`] = `"SELECT \\"users\\".* FROM \\"users\\" WHERE \\"users\\".\\"name\\" = 'test' AND \\"users\\".\\"email\\" = 'test@example.com'"`;

exports[`where 4`] = `"SELECT \\"users\\".* FROM \\"users\\" WHERE \\"users\\".\\"name\\" = 'test' AND \\"users\\".\\"email\\" = 'test@example.com'"`;
